# notes_app_rust_crash_course

./: Cargo.toml  notes.txt
src/: main.rs
