[package]
name = "notes_app_rust_crash_course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"

# [profile.release]
# # https://github.com/johnthagen/min-sized-rust
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"